--- a/backend/.env.example
+++ b/backend/.env.example
@@ -20,12 +20,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mongodb
+DB_HOST=127.0.0.1
+DB_PORT=27017
+DB_DATABASE=inspection_db
+DB_USERNAME=admin
+DB_PASSWORD=secret123
+DB_URI=mongodb://admin:secret123@127.0.0.1:27017/inspection_db?authSource=admin
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
